style.css
* {
  border-style: border-box;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Noto Sans", sans-serif;
}

body,
html {
  height: 100vh;
}

.container {
  height: 100%;
  background-image: url(default.png);
  color: white;
}

main {
  height: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}
.container2 {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-start;
  width: 60%;
  height: 100%;
}

.information-wrap,
.search {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding-left: 90px;
}

.location {
  display: flex;
  font-size: 75px;
  font-weight: bold;
}

.weather {
  display: flex;
  flex-direction: column;
}

.weather-wrap {
  display: flex;
  flex-direction: row;
  gap: 15px;
  font-size: 45px;
  font-weight: lighter;
}

.wrap2 {
  display: flex;
  gap: 20px;
  font-size: 20px;
  font-weight: lighter;
  opacity: 80%;
}

